--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-.jumbotron{
-  width: 800px;
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 40px;
-}
-
 .title{
   height: 30px;
   width: 500px;
@@ -15,6 +7,15 @@
   margin-top: 10px;
 }
 
+.btn-primary{
+  width: 100px;
+}
 
+.value {
+  width: 145px;
+}
 
-
+.col-md-6{
+  background-color: #99CCCC;
+  margin-top: 30px;
+}
